--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "main": "main.js",
     "scripts": {
         "start": "node main.js",
+        "start": "node index.js",     
         "dev": "nodemon main.js"
     },
     "dependencies": {
         "axios": "^0.21.1",
+        "express": "^4.13.3",
         "telegraf": "^4.3.0"
     },
     "repository": {
