--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "axios": "^0.21.1",
         "express": "^4.13.3",
+         "ejs": "~2.7.1",
         "telegraf": "^4.3.0"
     },
     "repository": {
