--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
     "description": "Weather bot for Telegram made using TelegrafJs",
     "main": "main.js",
     "scripts": {
-        "start": "node main.js",  
+        "server": "node server.js"
+        "main": "node main.js"
+        "start": "concurrently \"npn run server\" \"npn run main\"",  
         "dev": "nodemon main.js"
+        "starts": "node server.js"
     },
     "dependencies": {
         "axios": "^0.21.1",
         "express": "^4.13.3",
          "ejs": "~2.7.1",
-        "telegraf": "^4.3.0"
+        "telegraf": "^4.3.0",
+        "concurrently": "6.1.0"
     },
     "repository": {
         "type": "git",
