--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
         "express": "~4.9.8",
          "ejs": "~2.7.1",
         "telegraf": "^4.3.0",
-        "concurrently": "^6.1.0"
+        "concurrently": "^6.1.0",
+        "npm-run-all":"v4.1.5"
+        
     },
     "repository": {
         "type": "git",
