--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "main": "nodemon main.js",
         "ser": "node server.js",
-        "start": "npm-run-all --parallel lint build"  
+        "start": "node main"  
     },
     "dependencies": {
         "axios": "^0.21.1",
